feat: bring in header/modal to policy-repository

--- a/solution/backend/regulations/templates/regulations/policy_repository.html
+++ b/solution/backend/regulations/templates/regulations/policy_repository.html
@@ -1,4 +1,4 @@
-{% extends "regulations/base.html" %}
+{% extends "regulations/spa_base.html" %}
 {% load static %}
 {% load string_formatters %}
 
@@ -18,7 +18,6 @@
 {% endblock %}
 
 {% block body %}
-<h1>HELLO, YOU HAVE REACHED THE POLICY REPOSITORY PLACEHOLDER.  PLEASE ENJOY YOUR STAY.</h1>
 <div
     id="vite-app"
     data-api-url="{{ API_BASE }}"
@@ -29,8 +28,4 @@
     data-search-url="{% url 'search' %}"
     data-host="{{ host }}"
 ></div>
-{% endblock %}
-
-{% block post_footer %}
-    <script src="{% static '/vite/index.js' %}"></script>
 {% endblock %}
