--- a/solution/backend/regulations/templates/regulations/policy_repository.html
+++ b/solution/backend/regulations/templates/regulations/policy_repository.html
@@ -26,6 +26,7 @@
     data-home-url="{% url 'homepage' %}"
     data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
+    data-statutes-url="{% url 'statutes' %}"
     data-host="{{ host }}"
 ></div>
 {% endblock %}
