feat: snake isAuthenticated into vite spa

--- a/solution/backend/regulations/templates/regulations/policy_repository.html
+++ b/solution/backend/regulations/templates/regulations/policy_repository.html
@@ -28,5 +28,6 @@
     data-search-url="{% url 'search' %}"
     data-statutes-url="{% url 'statutes' %}"
     data-host="{{ host }}"
+    data-is-authenticated="{{ is_authenticated }}"
 ></div>
 {% endblock %}
