--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -10,7 +10,7 @@
         margin-bottom: 16px;
         padding: 0 45px;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
 
         .doc-list__item {
             padding-bottom: 5px;
