chore: simplify footer date logic for spa/non-spa in django template

--- a/solution/backend/regulations/templates/regulations/spa_base.html
+++ b/solution/backend/regulations/templates/regulations/spa_base.html
@@ -1,6 +1,12 @@
 {% extends "regulations/base.html" %}
 {% load static %}
 
+{% block footer %}
+    <footer>
+        {% include "regulations/partials/footer.html" with spa_footer=True %}
+    </footer>
+{% endblock %}
+
 {% block post_footer %}
     <script src="{% static '/vite/index.js' %}?{{ DEPLOY_NUMBER }}"></script>
 {% endblock %}
