feat: style subject chips

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -129,6 +129,8 @@ $jump_to_submit_disabled: $mid_gray_3;
 $jump_to_submit_active: $mid_blue;
 $jump_to_submit_active_focus: $dark_blue;
 
+$policy_subject_chip_background: $light_blue_2;
+
 // Borders
 
 $border_color: $light_gray;
@@ -142,6 +144,7 @@ $formula_left_border: $light_blue;
 $primary_text_color: $dark_gray;
 $secondary_text_color: $mid_gray;
 $reverse_text_color: $white;
+$policy_subject_chip_text: $mid_blue;
 
 // Indicators
 
