--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: column;
 
-        .doc-list {
+        .doc__list {
             margin-top: 36px;
 
             .doc-list__document {
