add euafeatureflag as a boolean

--- a/solution/backend/cmcs_regulations/templates/admin/login.html
+++ b/solution/backend/cmcs_regulations/templates/admin/login.html
@@ -19,7 +19,7 @@
         </style>
     {% endblock %}
    {{ block.super }}
-   {% if EUA_FEATUREFLAG == 'true' %}
+   {% if EUA_FEATUREFLAG %}
       <div class="okta_login_container">
         Or Login With &nbsp;<a href="{% url 'oidc_authentication_init' %}">EUA</a>
       </div>
