EREGCSC-2011 - Setup EUA mapping (#954)
* EREGCSC-2011-setup-eua-mapping-for permissions

--- a/solution/backend/cmcs_regulations/templates/admin/login.html
+++ b/solution/backend/cmcs_regulations/templates/admin/login.html
@@ -19,9 +19,11 @@
         </style>
     {% endblock %}
    {{ block.super }}
-   <div class="okta_login_container">
-       Or Login With&nbsp; <a href="https://www.google.com/">EUA</a>
-   </div>
+   {% if EUA_FEATUREFLAG %}
+      <div class="okta_login_container">
+        Or Login With &nbsp;<a href="{% url 'oidc_authentication_init' %}">EUA</a>
+      </div>
+   {% endif %}
    {% if form.errors %}
     <p>Invalid credentials.  Please contact an eRegs administrator if you need access.</p>
   {% endif %}
