EREGCSC-2156 -- Refined policy repository results styling (#955)
* fix: add last updated date to policy-repository footer

* chore: simplify footer date logic for spa/non-spa in django template

* feat: properly redirect subpart view if no date

* refactor: simplify locationUrl filter to remove unnecessary parameters and async calls

* chore: update eslint rule

* feat: add basic PolicyResults component

* refactor: move locatio filtering logic into RelatedSections component

* feat: better loading logic for partsLastUpdated

* refactor: better provide django urls deep into component tree for policy-repo

* fix: wrong prop provided

* refactor: provide props into resources and search better

* fix: add injection to RegResults

* feat: continue styling

* chore: clean up glaring lint errors

* feat: style subject chips

* fix: fix spelling mistake in scss file

* chore: use gap for row and column gap between subj chips

* feat: use doc.name for name download link

* test: basic local only auth e2e tests

* test: use cypress.env.json for env variables

* test: tweak cypress login flow

* test: first attempt to pull in AWS params to github action as env vars

* test: tweak aws secrets used in ssm action

* test: ensure test-cypress block has permissions

* chore: add name and descriptive comment to new action added to test-cypress job

* test: see if action runs just configuring aws credentials

* test: reorder based on aws docs example

* test: add environment to test-cypress job

* test: get ssm test username and password and set as cypress env vars

* test: use existing seeded eregsuser creds

* test: remove granular permissions and see if things still work

* test: update deploy.yml to ger test user creds from param store

* test: add template for cypress.env.json

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -129,6 +129,8 @@ $jump_to_submit_disabled: $mid_gray_3;
 $jump_to_submit_active: $mid_blue;
 $jump_to_submit_active_focus: $dark_blue;
 
+$policy_subject_chip_background: $light_blue_2;
+
 // Borders
 
 $border_color: $light_gray;
@@ -142,6 +144,7 @@ $formula_left_border: $light_blue;
 $primary_text_color: $dark_gray;
 $secondary_text_color: $mid_gray;
 $reverse_text_color: $white;
+$policy_subject_chip_text: $mid_blue;
 
 // Indicators
 
@@ -514,4 +517,17 @@ select {
     @include screen-eds-sm {
         scroll-margin-top: $header_height + $view_compare_height + 37px;
     }
+}
+
+// -------------------------
+// Other Common Settings
+// -------------------------
+
+// Related Sections styles
+// used across Search Results and Policy Repository
+@mixin common-context-related-sections {
+    color: $mid_gray;
+    font-size: $font-size-sm;
+    font-weight: 400;
+    line-height: 22px;
 }
