--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -7,12 +7,12 @@
 .policy-repository-page {
     #policyRepositoryApp.repository-view {
         overflow: auto;
-        margin-bottom: 1em;
+        margin-bottom: 1rem;
         display: flex;
         flex-direction: column;
 
         &.ds-l-container {
-            padding-top: 1.5em;
+            padding-top: 1.5rem;
             margin: 0;
             max-width: 100%;
         }
@@ -28,11 +28,33 @@
 
         .sidebar__filters {
             flex: 1;
+
+            .subjects__list {
+                .subjects__li {
+                    margin-bottom: 0.75rem;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+
+                    button {
+                        text-align: left;
+
+                        &:hover,
+                        &:focus,
+                        &:active {
+                            @include font-bold-keep-width;
+
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
         }
 
         .doc__list {
             .doc-list__document {
-                padding: 0.75em 1em;
+                padding: 0.75rem 1rem;
                 border-bottom: 1px solid $border_color;
 
                 h3 {
@@ -41,7 +63,7 @@
                 }
 
                 .document__info-block {
-                    margin-bottom: 0.75em;
+                    margin-bottom: 0.75rem;
                 }
 
                 .document__link {
@@ -57,7 +79,7 @@
                 }
 
                 .document__filename {
-                    margin-top: 0.25em;
+                    margin-top: 0.25rem;
                 }
 
                 .document__subjects {
