--- a/solution/ui/regulations/css/scss/partials/_typography.scss
+++ b/solution/ui/regulations/css/scss/partials/_typography.scss
@@ -77,3 +77,10 @@ e[t="05"] {
     text-transform: uppercase;
     text-align: center;
 }
+
+.sidebar__li {
+    list-style: none;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+    font-family: Open Sans, Helvetica, sans-serif;
+}
