--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -30,6 +30,12 @@
             flex: 1;
 
             .subjects__list {
+                height: 300px;
+                overflow: scroll;
+                padding: 0.75rem 1rem;
+                border: 2px solid $border_color;
+                border-radius: 4px;
+
                 .subjects__li {
                     margin-bottom: 0.75rem;
 
