feat: user vue-router RouterLink to update url

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -43,8 +43,11 @@
                         margin-bottom: 0;
                     }
 
-                    button {
+                    a {
+                        text-decoration: none;
+                        transition: none;
                         text-align: left;
+                        color: #000;
 
                         &:hover,
                         &:focus,
