feat: solidify url query param update logic

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -43,9 +43,7 @@
                         margin-bottom: 0;
                     }
 
-                    a {
-                        text-decoration: none;
-                        transition: none;
+                    button {
                         text-align: left;
                         color: #000;
 
