style: minor style update

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -46,6 +46,7 @@
                     button {
                         text-align: left;
                         color: #000;
+                        width: 100%;
 
                         &:hover,
                         &:focus,
