feat: subject chip close btn tweaks

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -174,6 +174,7 @@ $main_button_hover_background: $white;
 $copy_button_success: $green;
 
 $policy_subject_close_background: $light_gray;
+$policy_subject_close_background_hover: $mid_gray_3;
 
 //--------------------------
 // Fonts
