--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -62,6 +62,12 @@
                             background-color: $policy_subject_close_background;
                             color: $policy_subject_selected_chip_background;
                             border-radius: 4px;
+                            &:hover,
+                            &:focus,
+                            &:active {
+                                background-color: #c0c1c3;
+
+                            }
 
                             i {
                                 pointer-events: none;
