--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -133,7 +133,15 @@
             }
         }
 
+        .loading__span {
+            padding: 0 1rem;
+        }
+
         .doc__list {
+            .search-results-count {
+                padding: 0 1rem;
+            }
+
             .doc-list__document {
                 padding: 0.75rem 1rem;
                 border-bottom: 1px solid $border_color;
