EREGCSC-2214 -- Subject Filter for Policy Repository (#970)
* feat: implement basics of CMS grid system for desktop views

* feat: responsive columns for narrow view

* feat: add getPolicyDocSubjects endpoint

* feat: basic cms-styled subject select

* feat: begin styling per latest design

* feat: better list styles

* feat: provide/inject reactive urlParams

* feat: user vue-router RouterLink to update url

* feat: solidify url query param update logic

* feat: get multiple subject fetch working

* style: minor style update

* feat: crude subject chips with remove btn

* feat: better organize reactive data

* feat: refactor to better handle queryParams on load

* chore: allow non-strict equal in eslint rules

* feat: clear selected chips reliably

* chore: use datetime.now for local dev cache busting

* feat: sync up subject name logic for all places on policy-repo

* chore: begin refactor so URL determines state

* feat: finish refactor so URL controls state and back btn works

* feat: style subject selection chips

* feat: subject chip close btn tweaks

* feat: very, very basic mobile styles

* feat: clean up loading states

* chore: fix bad merge

* chore: update JSDoc annotations

* chore: make subject sorting consistent

* chore: light cleaning and refactoring

* test: very basic policy repository URL response assertions

* test: basic URL naivigation test flow

* fix: handle garbage subject query param values

* fix: ignore non-subjects query param keys

* fix: sanitize duplicate query param keys into just the first key

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -130,6 +130,7 @@ $jump_to_submit_active: $mid_blue;
 $jump_to_submit_active_focus: $dark_blue;
 
 $policy_subject_chip_background: $light_blue_2;
+$policy_subject_selected_chip_background: $dark_blue;
 
 // Borders
 
@@ -145,6 +146,7 @@ $primary_text_color: $dark_gray;
 $secondary_text_color: $mid_gray;
 $reverse_text_color: $white;
 $policy_subject_chip_text: $mid_blue;
+$policy_subject_selected_chip_text: #FFF;
 
 // Indicators
 
@@ -171,6 +173,9 @@ $main_button_hover_background: $white;
 
 $copy_button_success: $green;
 
+$policy_subject_close_background: $light_gray;
+$policy_subject_close_background_hover: $mid_gray_3;
+
 //--------------------------
 // Fonts
 //--------------------------
@@ -191,6 +196,15 @@ $font_size_xxl: 30px; // Aligns with the CMS Design System, but their variable i
 
 $font_size_hero_h1: 26px;
 $font_size_hero_h1_tablet: 20px;
+
+@mixin font-bold-keep-width {
+    text-shadow: -0.06ex 0 0 currentColor, 0.06ex 0 0 currentColor;
+
+    @supports (-webkit-text-stroke-width: 0.04ex) {
+        text-shadow: -0.03ex 0 0 currentColor, 0.03ex 0 0 currentColor;
+        -webkit-text-stroke-width: 0.1ex;
+    }
+}
 
 //--------------------------
 // Breakpoints
