feat: wrap up basic search functionality

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -190,3 +190,9 @@
         }
     }
 }
+
+#policyRepositorySearchApp.repository-search-view {
+    .results__container {
+        margin-top: 1rem;
+    }
+}
