fix: adjust results width

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -194,5 +194,7 @@
 #policyRepositorySearchApp.repository-search-view {
     .results__container {
         margin-top: 1rem;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
