feat: first pass at using existing resultItem component for policy repo results

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -167,6 +167,7 @@
             }
 
             .document__subjects {
+                margin-top: 0.75rem;
                 display: flex;
                 flex-wrap: wrap;
                 gap: 4px;
