feat: style subject chips to match resources chips

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -173,13 +173,7 @@
                 gap: 4px;
 
                 .subject__chip {
-                    font-size: $font-size-sm;
-                    line-height: 22px;
-                    font-weight: 700;
-                    padding: 2px 4px;
-                    border-radius: 8px;
-                    background: $policy_subject_chip_background;
-                    color: $policy_subject_chip_text;
+                    @include common-chip-styles;
                 }
             }
 
