style: clean/consolidate styles

--- a/solution/ui/regulations/css/scss/main.scss
+++ b/solution/ui/regulations/css/scss/main.scss
@@ -22,7 +22,6 @@ $eregs-image-path: "../images" !default;
 @import 'application_settings';
 @import 'layout';
 @import "partials/typography";
-@import "partials/related_sections";
 @import "partials/site_homepage";
 @import "partials/search";
 @import "partials/statutes";
@@ -33,6 +32,7 @@ $eregs-image-path: "../images" !default;
 @import "partials/sidebar_right";
 @import 'partials/reg_text';
 @import 'partials/reg_part_homepage';
+@import 'partials/results_item';
 @import "partials/footer";
 @import "partials/error_pages";
 @import "partials/dropdown";
