--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -535,15 +535,7 @@ select {
 // Other Common Settings
 // -------------------------
 
-// Related Sections styles
-// used across Search Results and Policy Repository
-@mixin common-context-related-sections {
-    color: $mid_gray;
-    font-size: $font-size-sm;
-    font-weight: 400;
-    line-height: 22px;
-}
-
+// Blue chips used for Resources selections and Policy Doc subjects
 @mixin common-chip-styles {
     display: inline-flex;
     align-items: center;
