--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -158,34 +158,15 @@
                 }
             }
 
-            .document__type {
-                color: $mid_gray;
-            }
-
-            .document__filename {
-                margin-top: 0.25rem;
-            }
-
             .document__subjects {
+                margin-top: 0.75rem;
                 display: flex;
                 flex-wrap: wrap;
                 gap: 4px;
 
                 .subject__chip {
-                    font-size: $font-size-sm;
-                    line-height: 22px;
-                    font-weight: 700;
-                    padding: 2px 4px;
-                    border-radius: 8px;
-                    background: $policy_subject_chip_background;
-                    color: $policy_subject_chip_text;
+                    @include common-chip-styles;
                 }
-            }
-
-            .related-sections {
-                @include common-context-related-sections;
-
-                margin-bottom: 0px;
             }
         }
     }
