--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -137,6 +137,56 @@
         padding: 0 1rem;
     }
 
+    .subj-toc__container {
+        padding-left: 16px;
+
+        h1 {
+            font-size: 2.25rem;
+            margin-bottom: 0px;
+        }
+
+        ul.subj-toc__list {
+            padding: 0;
+
+            li.subj-toc__li {
+                list-style: none;
+                padding: 1rem 0.25rem;
+                border-bottom: 1px solid $border_color;
+
+                &:last-child {
+                    margin-bottom: 0;
+                    border-bottom: none;
+                }
+
+                a {
+                    text-decoration: none;
+
+                    &:hover,
+                    &:focus,
+                    &:active {
+                        cursor: pointer;
+                    }
+
+                    .subj-toc-li__div {
+                        display: inline-block;
+                        font-size: 1rem;
+                        line-height: 1.25rem;
+
+                        &--bold {
+                            font-weight: 700;
+                        }
+
+                        &.subj-toc-li__abbr {
+                            padding-right: 4px;
+                            margin-right: 6px;
+                            border-right: 1px solid $secondary_text_color;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     .doc__list {
         .search-results-count {
             padding: 0 1rem;
