--- a/solution/backend/regulations/templates/regulations/policy_repository.html
+++ b/solution/backend/regulations/templates/regulations/policy_repository.html
@@ -1,7 +1,6 @@
 {% extends "regulations/spa_base.html" %}
 {% load static %}
 {% load string_formatters %}
-{% load dynamic_urls %}
 
 {% block title %}Policy Repository{% endblock %}
 
@@ -23,7 +22,7 @@
     id="vite-app"
     data-api-url="{{ API_BASE }}"
     data-about-url="{% url 'about' %}"
-    data-custom-url="{% CUSTOM_URL %}"
+    data-custom-url="{{ CUSTOM_URL }}"
     data-home-url="{% url 'homepage' %}"
     data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
